# adventofcode

./: .mise.toml  01_secret_entrance.py  02_gift_shop.py  03_lobby  04_printing.py  05_cafeteria.py  pyproject.toml
utils/: data.py
